--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 
-<body>
+<body class="index-body">
 	<header>
 		<img id="logo" src="images/logo.png">
 		<nav id="nav-bar">
 			<ul>
 				<li><a href="index.html">ACCUEIL</a></li>
+				<li><a href="bye-bye-allergies.html">BYE BYE ALLERGIES</a></li>
 				<li><a href="tarifs.html">TARIFS</a></li>
 				<li><a href="contact.html">CONTACT</a></li>
 			</ul>
@@ -29,7 +30,7 @@
 			<p>Naturopathe et praticienne de la méthode BBA "Bye Bye Allergies", je propose mes conseils et pratiques afin de vous accompagner vers une meilleure santé tant physique que morale ou encore énergétique !</p>
 		</div>
 
-		<div class="main-element" style="align-self: flex-end; justify-content: flex-end;">			
+		<div class="main-element main-element-right">			
 			<p><a href="https://adieu-allergies.com/naturopathie">La naturopathie</a> est un ensemble de conseils d'hygiène vitale, de rééquilibrage alimentaire, de phyto-aromathérapie…etc. afin de garder ou bien de retrouver une bonne santé.</p>
 			<img src="images/naturo-2.jpeg">
 		</div>
@@ -37,6 +38,11 @@
 		<div class="main-element">
 			<img src="images/bye-bye-allergies.png">
 			<p><a href="https://www.adieu-allergies.com/bye-bye-allergies">La méthode BBA</a> est une technique douce, naturelle et énergétique et sans danger pour venir à bout des allergies, des intolérances et d’autres sensibilités.</p>
+		</div>
+
+		<div class="main-element main-element-right">			
+			<p><a href="https://www.ghislaine-fouville.fr/reflexologie-plantaire-rennes/">La réflexologie plantaire chinoise </a>  est une technique manuelle ancestrale.La voûte plantaire est riche en terminaisons nerveuses. Elle comporte une carte de lecture globale du corps où à chaque zone réflexe, correspond une partie très précise du corps.C'est un réveil du corps tant circulatoire, énergétique, que éliminatoire.</p>
+			<img src="images/reflexo-chinoise.jpg">
 		</div>
 	</div>
 
